[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"  # 添加这个依赖项
